fix: Add Java 8 compatibility for release-1.20 branch
- Replace Map.copyOf() with Collections.unmodifiableMap(new HashMap<>())
- Replace Map.of() with explicit HashMap creation and unmodifiableMap()
- Add required imports: Collections, HashMap
- Fixes GitHub CI compilation on Java 8 for release-1.20
- Maintains full functionality while supporting older Java versions
- All tests passing, S3 functionality verified